  same user from auth for other transactions
- Fixed issue with runtime/db directory not being included in gradle
  addRuntime and ant add-runtime, caused Derby to do funny things and
  OrientDB to not run at all under Tomcat and other external containers
- Fixed issue with Logger initializing before moqui.runtime is set when
  running under external servlet containers like Tomcat

===========================================================================
Release 1.3.2 - 20 Nov 2013
===========================================================================

Moqui Framework 1.3.2 is a minor new feature and bug fix release.

The main new feature is a write-through per-transaction cache that
effectively simulates the database for the scope of the transaction and
does all DB updates with a single connection just before commit. This
transaction cache is enabled on service definitions using the cache and
force-cache options for the service.@transaction attribute. With this in
place various Mantle services now run 2-3 times as fast with results
validated by extensive automated tests.

Another set of new features covers internal profiling for artifact
execution (entities, services, screens, transitions, etc). There are
various forms of output available including a full artifact call tree with
times, a consolidated tree to see own and total for artifacts in context,
and a hot spot list by own or total time. This is similar to Java-level
profiling tools but focuses on business level artifacts and with a low
overhead gathers data always but only generates reports when needed.

OrientDB is now included in the framework by default instead of only in an
addon component as before. This is useful as a general graph and document
database and as an alternative through the Entity Facade for high-write
entities like ArtifactHit.

New Features:

- Updated Apache Camel to 2.12.1, Ehcache to 2.7.5, Groovy to 2.1.9,